--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "uvth"
-version = "1.1.0"
+version = "2.0.0"
 authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
 edition = "2018"
 license = "MIT"
@@ -10,3 +10,4 @@ repository = "https://gitlab.nebulanet.cc/xacrimon/uvth"
 [dependencies]
 crossbeam-channel = "0.3.8"
 log = "0.4.6"
+num_cpus = "1"
