Removed old changes.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,10 +9,9 @@ variables:
 test:
   stage: test
   script:
-    - rustup install stable
-    - rustc +stable --version
-    - cargo +stable --version
-    - cargo +stable test --verbose
+    - rustc --version
+    - cargo --version
+    - cargo test --verbose
 
 cache:
   paths:
