--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "uvth"
-version = "4.0.0"
+version = "4.0.1"
 authors = ["Acrimon <joel.wejdenstal@gmail.com>"]
 edition = "2018"
 license = "MIT"
 description = "Compact and efficient threadpool implementation as an alternative to the threadpool crate."
-repository = "https://gitlab.nebulanet.cc/xacrimon/uvth"
+repository = "https://github.com/xacrimon/uvth"
+documentation = "https://docs.rs/uvth"
 
 [dependencies]
 crossbeam-channel = "0.3.9"
